# Micro-Rush

./: .gitignore  COMPANY.md  GETTING_STARTED.md  README.md  TASKS.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: DESIGNER.md  ENGINEER.md  LEAD.md  RESEARCHER.md  SOFTWARE-ENGINEER.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/microrush/: __init__.py
backend/src/microrush/agents/: __init__.py  agent.py
backend/src/microrush/api/: __init__.py  app.py  chat.py  health.py
backend/src/microrush/memory/: __init__.py  archival.py  recall.py
backend/src/microrush/plugins/: __init__.py
backend/src/microrush/skills/calendar/: __init__.py  plugin.py
backend/src/microrush/skills/files/: __init__.py  plugin.py
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.css  Chat.tsx
frontend/src/pages/: Landing.css  Landing.tsx
projects/researcher/reports/: res-001-market-research.md  res-002-framework-analysis.md
state/: loop-log.md
